# Caculator-qt-linux

./: CMakeLists.txt  MyPlainTextEdit.cpp  MyPlainTextEdit.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowBackup.ui
build-banPhimHost-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  banPhimHost  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-banPhimHost-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-1f6b56269179416d07b5.json  codemodel-v2-b1a7129b682abc9e8632.json  codemodel-v2-b7fa42a13eedb1199345.json  codemodel-v2-c6fae585fa1a98183bf7.json  codemodel-v2-d3d6834ee738729ae0b2.json  directory-.-Debug-2688c5ad3b7182ed5668.json  directory-.-Debug-30bee3d6f31147e985c4.json  directory-.-Debug-4b1904ab78bb7552930d.json  directory-.-Debug-9a2be5f3db22c1dd2fac.json  index-2025-07-29T02-17-55-0936.json  index-2025-07-29T06-35-38-0239.json  target-banPhimHost-Debug-1d4e3b605fcf72cf1885.json  target-banPhimHost-Debug-6e73f8072e7b5d8408ca.json  (+1 more)
build-banPhimHost-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-banPhimHost-Desktop-Debug/banPhimHost_autogen/: deps  mocs_compilation.cpp
build-banPhimHost-Desktop-Debug/banPhimHost_autogen/EWIEGA46WW/: moc_MyPlainTextEdit.cpp  moc_MyPlainTextEdit.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-banPhimHost-Desktop-Debug/banPhimHost_autogen/include/: ui_mainwindow.h
operation/: absoperation.cpp  absoperation.h  absopration.cpp  absopration.h  addoperation.cpp  addoperation.h  argoperation.cpp  argoperation.h  conjoperation.cpp  conjoperation.h  coshoperation.cpp  coshoperation.h  cosoperation.cpp  cosoperation.h  cotoperation.cpp  cotoperation.h  divoperation.cpp  divoperation.h  imoperation.cpp  imoperation.h  lnoperation.cpp  lnoperation.h  lnopration.cpp  lnopration.h  logoperation.cpp  logoperation.h  modoperation.cpp  modoperation.h  muloperation.cpp  muloperation.h  operation.h  operationfactory.cpp  operationfactory.h  powoperation.cpp  powoperation.h  reoperation.cpp  reoperation.h  sinhoperation.cpp  sinhoperation.h  sinoperation.cpp  (+10 more)
parser/: evaluator.cpp  evaluator.h  shuntingyard.cpp  shuntingyard.h  tokenizer.cpp  tokenizer.h
(+26 files in other folders)
